stdlib/test/logger_test.bt
// Copyright 2026 James Casey
// SPDX-License-Identifier: Apache-2.0

// Tests the Logger class — info:, warn:, error:, debug:, metadata variants,
// setLevel:, and type-error validation

TestCase subclass: LoggerTest

  testInfoReturnsNil =>
    // info: returns nil
    self assert: (Logger info: "test info message") equals: nil

  testInfoWithMetadata =>
    // info:metadata: returns nil
    self assert: (Logger info: "test info" metadata: #{
      "key" => "value"
    }) equals: nil

  testWarnReturnsNil =>
    // warn: returns nil
    self assert: (Logger warn: "test warn message") equals: nil

  testWarnWithMetadata =>
    // warn:metadata: returns nil
    self assert: (Logger warn: "test warn" metadata: #{
      "attempt" => 2
    }) equals: nil

  testErrorReturnsNil =>
    // error: returns nil
    self assert: (Logger error: "test error message") equals: nil

  testErrorWithMetadata =>
    // error:metadata: returns nil
    self assert: (Logger error: "test error" metadata: #{
      "reason" => "timeout"
    }) equals: nil

  testDebugReturnsNil =>
    // debug: returns nil
    self assert: (Logger debug: "test debug message") equals: nil

  testDebugWithMetadata =>
    // debug:metadata: returns nil
    self assert: (Logger debug: "test debug" metadata: #{
      "count" => 42
    }) equals: nil

  testSetLevel =>
    // setLevel: accepts valid log levels
    self assert: (Logger setLevel: #debug) equals: nil
    // Restore to a reasonable default
    self assert: (Logger setLevel: #notice) equals: nil

  testSetLevelTypeError =>
    // setLevel: requires Symbol argument — still dispatched through beamtalk_logger
    @expect type
    self should: [Logger setLevel: "debug"] raise: #type_error

  testSetLevelInvalidLevel =>
    // setLevel: with invalid symbol raises argument_error
    self should: [Logger setLevel: #not_a_real_level] raise: #argument_error
